--- a/task-manager-frontend/package.json
+++ b/task-manager-frontend/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.6.2",
+    "bootstrap": "^5.3.2",
+    "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "bootstrap": "^5.3.2",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
